--- a/k8s-installation/vagrant-ansible/ansible/playbooks/cluster.yml
+++ b/k8s-installation/vagrant-ansible/ansible/playbooks/cluster.yml
@@ -38,4 +38,4 @@
   import_playbook: hardening.yml
 
 - name: Jumpbox Setup
-  import_playbook: jumpbox_setup.yml
+  import_playbook: jumpbox-setup.yml
