--- a/k8s-installation/vagrant-ansible/ansible/roles/common/meta/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/common/meta/main.yml
@@ -1,1 +1,6 @@
 dependencies: []
+galaxy_info:
+  role_name: common
+  author: David Essien
+  description: Install prerequisite packages for cluster nodes
+  license: MIT
