--- a/k8s-installation/vagrant-ansible/ansible/roles/distribute-artifacts/tasks/distribute-kubeconfigs.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/distribute-artifacts/tasks/distribute-kubeconfigs.yml
@@ -15,18 +15,6 @@
     group: root
   when: inventory_hostname in groups['masters']
   retries: "{{ distribute_retries }}"
-  delegate_to: localhost
-
-- name: Distribute admin kubeconfig to jumpbox
-  copy:
-    src: "{{ paths.artifacts.kubeconfigs }}/admin.kubeconfig"
-    dest: "{{ paths.kubernetes.config_dir }}/admin.kubeconfig"
-    mode: "0600"
-    owner: root
-    group: root
-  when: inventory_hostname == 'jumpbox'
-  retries: "{{ distribute_retries }}"
-  delegate_to: localhost
 
 - name: Distribute kubelet kubeconfig to nodes
   copy:
@@ -37,7 +25,6 @@
     group: root
   when: inventory_hostname in groups['masters'] or inventory_hostname in groups['workers']
   retries: "{{ distribute_retries }}"
-  delegate_to: localhost
 
 - name: Distribute kube-proxy kubeconfig to workers
   copy:
@@ -48,4 +35,23 @@
     group: root
   when: inventory_hostname in groups['workers']
   retries: "{{ distribute_retries }}"
-  delegate_to: localhost
+
+- name: Distribute kube-scheduler kubeconfig to masters
+  copy:
+    src: "{{ paths.artifacts.kubeconfigs }}/kube-scheduler.kubeconfig"
+    dest: "{{ paths.kubernetes.config_dir }}/kube-scheduler.kubeconfig"
+    mode: "0600"
+    owner: root
+    group: root
+  when: inventory_hostname in groups['masters']
+  retries: "{{ distribute_retries }}"
+
+- name: Distribute kube-controller-manager kubeconfig to masters
+  copy:
+    src: "{{ paths.artifacts.kubeconfigs }}/kube-controller-manager.kubeconfig"
+    dest: "{{ paths.kubernetes.config_dir }}/kube-controller-manager.kubeconfig"
+    mode: "0600"
+    owner: root
+    group: root
+  when: inventory_hostname in groups['masters']
+  retries: "{{ distribute_retries }}"
