--- a/k8s-installation/vagrant-ansible/ansible/roles/distribute-artifacts/tasks/distribute-manifests.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/distribute-artifacts/tasks/distribute-manifests.yml
@@ -10,21 +10,19 @@
 - name: Distribute Flannel manifest to masters
   copy:
     src: "{{ paths.artifacts.manifests }}/kube-flannel.yml"
-    dest: "{{ paths.kubernetes.manifests_dir }}/kube-flannel.yml"
+    dest: "{{ base_dir}}/flannel.yml"
     mode: "0644"
     owner: root
     group: root
   when: inventory_hostname in groups['masters'] and cni_plugin == 'flannel'
   retries: "{{ distribute_retries }}"
-  delegate_to: localhost
 
 - name: Distribute Calico manifest to masters
   copy:
     src: "{{ paths.artifacts.manifests }}/calico.yaml"
-    dest: "{{ paths.kubernetes.manifests_dir }}/calico.yaml"
+    dest: "{{ base_dir}}/calico.yaml"
     mode: "0644"
     owner: root
     group: root
   when: inventory_hostname in groups['masters'] and cni_plugin == 'calico'
   retries: "{{ distribute_retries }}"
-  delegate_to: localhost
