--- a/k8s-installation/vagrant-ansible/ansible/roles/etcd/meta/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/etcd/meta/main.yml
@@ -1,3 +1,6 @@
-dependencies:
-  - role: common
-  - role: distribute-artifacts
+dependencies: []
+galaxy_info:
+  role_name: etcd
+  author: David Essien
+  description: Setup and configure etcd
+  license: MIT
