--- a/k8s-installation/vagrant-ansible/ansible/roles/generate-artifacts/meta/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/generate-artifacts/meta/main.yml
@@ -1,5 +1,4 @@
-dependencies:
-  - download-artifacts # Requires binaries if any, but mainly paths
+dependencies: []
 galaxy_info:
   role_name: generate-artifacts
   author: David Essien
