--- a/k8s-installation/vagrant-ansible/ansible/roles/generate-artifacts/tasks/generate-kubeconfigs.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/generate-artifacts/tasks/generate-kubeconfigs.yml
@@ -35,3 +35,21 @@
     owner: vagrant
     group: vagrant
   delegate_to: localhost
+
+- name: Generate kube-scheduler kubeconfig
+  template:
+    src: kube-scheduler.kubeconfig.j2
+    dest: "{{ paths.artifacts.kubeconfigs }}/kube-scheduler.kubeconfig"
+    mode: "0600"
+    owner: vagrant
+    group: vagrant
+  delegate_to: localhost
+
+- name: Generate kube-controller-manager kubeconfig
+  template:
+    src: kube-controller-manager.kubeconfig.j2
+    dest: "{{ paths.artifacts.kubeconfigs }}/kube-controller-manager.kubeconfig"
+    mode: "0600"
+    owner: vagrant
+    group: vagrant
+  delegate_to: localhost
