--- a/k8s-installation/vagrant-ansible/ansible/roles/hardening/meta/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/hardening/meta/main.yml
@@ -1,7 +1,4 @@
-dependencies:
-  - control-plane
-  - bootstrap
-  - networking
+dependencies:  []
 galaxy_info:
   role_name: hardening
   author: David Essien
