--- a/k8s-installation/vagrant-ansible/ansible/roles/kubelet/meta/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/kubelet/meta/main.yml
@@ -1,2 +1,6 @@
-dependencies:
-  - role: container-runtime
+dependencies: []
+galaxy_info:
+  role_name: kubelet
+  author: David Essien
+  description: Configure kubelet on Kubernetes worker nodes
+  license: MIT
