--- a/k8s-installation/vagrant-ansible/ansible/inventory/host_vars/master1.yml
+++ b/k8s-installation/vagrant-ansible/ansible/inventory/host_vars/master1.yml
@@ -1,5 +1,5 @@
 node_name: master1
 api_server_endpoint: https://{{ kubernetes_public_address }}:6443
-kube_apiserver_kubeconfig: "{{ kubernetes.config_dir }}/kube-apiserver.kubeconfig"
-kube_controller_manager_kubeconfig: "{{ kubernetes.config_dir }}/kube-controller-manager.kubeconfig"
-kube_scheduler_kubeconfig: "{{ kubernetes.config_dir }}/kube-scheduler.kubeconfig"
+kube_apiserver_kubeconfig: "{{ paths.kubernetes.config_dir }}/kube-apiserver.kubeconfig"
+kube_controller_manager_kubeconfig: "{{ paths.kubernetes.config_dir }}/kube-controller-manager.kubeconfig"
+kube_scheduler_kubeconfig: "{{ paths.kubernetes.config_dir }}/kube-scheduler.kubeconfig"
