--- a/k8s-installation/vagrant-ansible/ansible/roles/container-runtime/meta/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/container-runtime/meta/main.yml
@@ -1,3 +1,6 @@
-dependencies:
-  - role: common
-  - role: distribute-artifacts
+dependencies: []
+galaxy_info:
+  role_name: container-runtime
+  author: David Essien
+  description: Install containerd run time for managing containers
+  license: MIT
