--- a/k8s-installation/vagrant-ansible/ansible/roles/control-plane/tasks/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/control-plane/tasks/main.yml
@@ -21,7 +21,7 @@
   tags: control-plane
 
 - name: Generate encryption key for at-rest encryption
-  command: >
+  shell: >
     head -c 32 /dev/urandom | base64
   register: encryption_key
   changed_when: false
@@ -35,6 +35,17 @@
     owner: root
     group: root
     mode: "0600"
+  become: yes
+  when: inventory_hostname in groups['masters']
+  tags: control-plane
+
+- name: Deploy Pod Security Admission configuration
+  template:
+    src: pod-security-admission.yaml.j2 # Path relative to the 'tasks' directory
+    dest: "{{ config_dir }}/pod-security-admission.yaml"
+    owner: root
+    group: root
+    mode: "0644"
   become: yes
   when: inventory_hostname in groups['masters']
   tags: control-plane
