--- a/k8s-installation/vagrant-ansible/ansible/roles/distribute-artifacts/tasks/distribute-binaries.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/distribute-artifacts/tasks/distribute-binaries.yml
@@ -18,20 +18,9 @@
     - kube-controller-manager
     - kube-scheduler
     - kubectl
+    - kubelet
   when: inventory_hostname in groups['masters']
   retries: "{{ distribute_retries }}"
-  delegate_to: localhost
-
-- name: Distribute kubectl to jumpbox
-  copy:
-    src: "{{ paths.artifacts.binaries }}/kubectl"
-    dest: "/usr/local/bin/kubectl"
-    mode: "0755"
-    owner: root
-    group: root
-  when: inventory_hostname == 'jumpbox'
-  retries: "{{ distribute_retries }}"
-  delegate_to: localhost
 
 - name: Distribute Kubernetes binaries to workers
   copy:
@@ -46,7 +35,6 @@
     - kubectl
   when: inventory_hostname in groups['workers']
   retries: "{{ distribute_retries }}"
-  delegate_to: localhost
 
 - name: Distribute etcd binaries to masters
   copy:
@@ -60,7 +48,6 @@
     - etcdctl
   when: inventory_hostname in groups['masters']
   retries: "{{ distribute_retries }}"
-  delegate_to: localhost
 
 - name: Distribute containerd binaries to all nodes
   copy:
@@ -75,7 +62,16 @@
     - ctr
   when: inventory_hostname in groups['masters'] or inventory_hostname in groups['workers']
   retries: "{{ distribute_retries }}"
-  delegate_to: localhost
+
+- name: Distribute crictl binary to all nodes
+  copy:
+    src: "{{ paths.artifacts.binaries }}/crictl"
+    dest: "/usr/local/bin/crictl"
+    mode: "0755"
+    owner: root
+    group: root
+  when: inventory_hostname in groups['masters'] or inventory_hostname in groups['workers']
+  retries: "{{ distribute_retries }}"
 
 - name: Distribute runc binary to all nodes
   copy:
@@ -86,4 +82,3 @@
     group: root
   when: inventory_hostname in groups['masters'] or inventory_hostname in groups['workers']
   retries: "{{ distribute_retries }}"
-  delegate_to: localhost
