--- a/k8s-installation/vagrant-ansible/ansible/roles/jumpbox-setup/meta/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/jumpbox-setup/meta/main.yml
@@ -1,6 +1,4 @@
-dependencies:
-  - distribute-artifacts
-  - control-plane
+dependencies: []
 galaxy_info:
   role_name: jumpbox
   author: David Essien
