--- a/k8s-installation/vagrant-ansible/ansible/roles/networking/defaults/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/networking/defaults/main.yml
@@ -1,3 +1,3 @@
 dns_manifest_dest: /etc/kubernetes/{{ dns_plugin }}.yml
 dns_kubeconfig: "{{ config_dir }}/admin.kubeconfig"
-dns_service_ip: "{{ service_cidr | ipaddr('10') | default('10.96.0.10') }}"
+dns_service_ip: "{{ service_cidr | ipaddr('10') | ipaddr('address') | default('10.96.0.10') }}"
