--- a/k8s-installation/vagrant-ansible/ansible/roles/distribute-artifacts/tasks/distribute-cni-plugins.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/distribute-artifacts/tasks/distribute-cni-plugins.yml
@@ -25,3 +25,5 @@
     - bandwidth
   become: yes
   when: inventory_hostname in groups['masters'] or inventory_hostname in groups['workers']
+  # notify: Restart kubelet
+  tags: container-runtime
