--- a/k8s-installation/vagrant-ansible/ansible/roles/cni/handlers/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/cni/handlers/main.yml
@@ -1,3 +1,13 @@
+- name: Apply Flannel RBAC
+  ansible.builtin.command:
+    cmd: kubectl apply -f /etc/kubernetes/flannel-rbac.yaml
+  register: flannel_rbac_apply
+  changed_when: "'created' in flannel_rbac_apply.stdout or 'configured' in flannel_rbac_apply.stdout"
+  environment:
+    KUBECONFIG: "{{ config_dir }}/admin.kubeconfig"
+  when: inventory_hostname == 'master1'
+  tags: cni
+
 - name: Restart kubelet for CNI
   ansible.builtin.systemd:
     name: kubelet
